test/language/spec/syntax/invalid/unterminated_block_comment.topo
// TEST: unterminated block comment
// EXPECT-ERROR: unterminated block comment

/* this comment never ends
namespace app {
  public:
    void run();
}
